2004-12-29  Christian Reis <kiko@async.com.br>

	* downloads.src: Nikos Kouremenos <kourem@gmail.com> pointed out
	that 2.4.1 is the latest release, not 2.4.0. I decided to nuke
	all the version numbers out of that page.

	* applications.src: really fixed link for pyirc

2004-12-24  John Finlay  <finlay@moeraki.com>

	* newsitems.py: PyGTK 2.0 Tutorial v2.3

	* Makefile: wget PDF version of Tutorial.

	* tutorial.src: Update for PyGTK 2.0 Tutorial v2.3, Add PDF version.

2004-12-23  John Finlay  <finlay@moeraki.com>

	* reference.src: Update version and date info.

	* newsitems.py: PyGTK 2.5.1 Reference Manual

2004-12-23  Johan Dahlin  <johan@gnome.org>

	* newsitems.py: PyGTK 2.5.1

2004-12-21    <lgs@sicem.biz>

	* tutorial.src: updated spanish translation

2004-12-13  Xavier Ordoquy <xordoquy@linovia.com>

	* applications.src: changed pyirc website.

2004-12-01    <lgs@sicem.biz>

	* newsitems.py (item): added items for pygtk, gnome-python and
	gnome-python-extras updates, aswell as the Mataro pygtk-mega-bof.

2004-11-22    <lgs@sicem.biz>

	* applications.src: added OnTv (patch by pachi)

2004-11-19  Christian Reis <kiko@async.com.br>

	* head.src: commenting out bonsai and LXR links, they're dead

2004-11-16  John Finlay  <finlay@moeraki.com>

	* newsitems.py (item): New ref manual 2.5.0.

	* reference.src: Update for 2.5.0 ref manual.

2004-11-11    <lgs@sicem.biz>

	* newsitems.py (item): fixed mistake with octal dates

	* articles.src: added a row for Patrick Wagstrom article

2004-11-09    <lgs@sicem.biz>

	* newsitems.py (item): added a newsitem for that tutorial

	* articles.src: added a row for tigrux tutorial

2004-11-05    <lgs@sicem.biz>

	* newsitems.py (item): added item for PyGTK 2.4.1 by pachi

2004-10-05  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* downloads.src: updated the current version

	* newsitems.py (item): added item for PyGTK 2.4.0, Gnome-Python 2.6.0
	and PyOrbit 2.0.1

2004-10-04  John Finlay  <finlay@moeraki.com>
